--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,27 +2,24 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ptappmovil.upiita.pt_appmovil">
 
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo_upiita"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"></activity>
 
-        </activity>
         <!-- Splash screen -->
         <activity
-            android:name="com.ptappmovil.upiita.pt_appmovil.SplashScreen"
+            android:name=".SplashScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar" >
-
+            android:theme="@android:style/Theme.Black.NoTitleBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,6 +27,9 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".Login"
+            android:label="@string/title_activity_login"></activity>
     </application>
 
 </manifest>
