--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,9 @@
 apply plugin: 'com.android.application'
+repositories {
+    maven {
+        url "https://jitpack.io"
+    }
+}
 
 android {
     compileSdkVersion 23
@@ -26,4 +31,8 @@ dependencies {
     compile 'com.android.support:design:23.2.1'
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'com.github.Triggertrap:SeekArc:v1.1'
 }
+
+
+
