--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,9 +31,11 @@
         <activity
             android:name=".ControlActivity"
             android:label="@string/title_activity_control"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar"></activity>
+        <activity
+            android:name=".LightActivity"
+            android:label="@string/title_activity_light"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
