--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ buildscript {
 android {
     compileSdkVersion 23
     buildToolsVersion "23.0.2"
+    useLibrary  'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "com.ptappmovil.upiita.pt_appmovil"
@@ -38,7 +39,6 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.github.JesusM:HoloCircleSeekBar:v2.2.2'
-    compile 'com.microsoft.azure:azure-mobile-services-android-sdk:2.0.3'
 
 }
 
