--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,7 +39,7 @@ dependencies {
     compile 'com.android.support:support-v4:23.2.1'
     compile 'com.jakewharton:butterknife:6.1.0'
     compile 'com.github.JesusM:HoloCircleSeekBar:v2.2.2'
-
+    compile 'com.android.volley:volley:1.0.0'
 }
 
 
