--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,13 +3,14 @@
     package="com.ptappmovil.upiita.pt_appmovil">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo_upiita"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <activity
             android:name=".Activities.MainActivity"
             android:label="@string/app_name"
@@ -57,6 +58,10 @@
         <activity
             android:name=".Activities.OrderActivity"
             android:label="@string/title_activity_order"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Activities.AgendaActivity"
+            android:label="@string/title_activity_agenda"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
